--- a/index.html
+++ b/index.html
@@ -4,6 +4,28 @@
     <title>Lists Lab</title>
   </head>
   <body>
-    <!-- Write your HTML in this file -->
+     <ul>
+      <li>Ham and Cheese</li>
+      <li>Grilled Cheese</li>
+        <ul>
+          <li>cheddar</li>
+            <li>mozarella</li>
+              <li>pepper jack</li>
+        
+        </ul>
+      </li>
+      <li>Nacho Cheese French Fries</li>
+      <li>Cheese soup</li>
+      <li>Cheese and crackers</li>
+      <li>Sushi</li>
+    </ul><!-- Write your HTML in this file -->
+    <ol>
+      <li>Spread butter on bread and frying pan</li>
+       <li>Place bread in frying pan and fry</li>
+       <li>add cheese on top of bread</li>
+       <li>cover with second slice of bread
+        <li>turn over and fry for two minutes</li>
+       
+    </ol>
   </body>
 </html>
